# wilmut_invader

./: LICENSE  README.md  index.html  pyproject.toml  wilmut_invader.apk
.github/workflows/: deploy_pygame.yml
build_android_apk/: build_android_apk.sh  buildozer.spec  pygame-ce-recipe.py
src/wilmut_invader/: build_onionos_port.py  game.py  main.py
