[project]
name = "wilmut-invader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
    "pygbag>=0.9.2",
]

[project.scripts]
wilmut-invader = "wilmut_invader:main.start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
